[tool.poetry]
name = "cmcl"
version = "0.1.0"
description = "gov"
authors = ["mukul <mukulnamagiri1@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "dash", "flask"]

[tool.poetry.dependencies]
python = "^3.6.0"
gunicorn = "^20.1.0"
scikit-learn = "0.24.2"
dash = "2.15.0"
dash-bootstrap-components = "1.2.1"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-renderer = "1.4.1"
dash-table = "5.0.0"
flask = "2.0.3"
flask-compress = "1.15"
geopandas = "0.9.0"
folium = "0.13.0"
plotly = "5.18.0"
pandas = "0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
